fix double border on text editor

--- a/web-next/src/app/components/note/contentblock/contentblock.module.css
+++ b/web-next/src/app/components/note/contentblock/contentblock.module.css
@@ -15,7 +15,6 @@
 	outline: none;
 
 	padding-bottom: 4px;
-	margin-bottom: 2vh;
 	border-bottom: 2px solid #888888;
 }
 
